# repo-template-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SECURITY_BASELINE.md  SUPPORT.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecards.yml  semantic-release.yml
docs/: README_FORMAT.md
scripts/: apply-branch-protection.ps1  tidy-pull-requests.ps1
src/project_template/: __init__.py
tests/: test_sample.py
