[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-template"
version = "0.1.0"
description = "A minimal Python project template"
authors = [{ name = "Michael Coyle" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E","F","I","UP","B","PL"]
ignore = ["E203","E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
